--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 晴読雨読
 description: >
   My Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 baseurl: "/dokusyo-kansobun-jekyll-theme"
-url: ""
+url: "https://6uclz1.github.io"
 
 author:
   name: 6uclz1
